--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.24.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
+    "braft-editor": "^2.3.8",
     "dva": "^2.4.1",
     "react": "^16.10.2",
     "react-dom": "^16.2.0"
