--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "antd": "^3.24.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
